GNOME Bugzilla – Bug 779463
Updates list repeatedly disappears while updating
Last modified: 2017-03-16 12:43:47 UTC
Created attachment 347041 [details] screencast If I press "Update All", while the updates take place, the update list repeatedly disappears and reappears - see the attached screencast for an example. It seems that the view is being momentarily replaced with the "downloading new updates" state - the list is replaced by a grey background with "Downloading new updates" in the middle, and the "Restart & Update" button is shown in the header bar. The overall effect is quite disconcerting.
I think we've fixed this with: commit 036098e669d989b0039bf0a846b9accba6608a52 Author: Richard Hughes <richard@hughsie.com> Date: Fri Mar 3 22:20:04 2017 +0000 Do not reload the updates list when updates are in progress Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=779463 :100644 100644 a5cf904... d6b0403... M src/gs-page.c :100644 100644 62d224f... a9d9155... M src/gs-page.h :100644 100644 a245dc7... 1e361b1... M src/gs-shell-updates.c Can you verify please? Thanks.
Just tested master and it seems to be fixed indeed. Thank you!!!