Do not reload the updates list when updates are in progress

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=779463